/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.13/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    id 'java'
    id('com.gradleup.shadow') version '9.4.1'
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

dependencies {
    implementation 'org.jline:jline:3.30.0'
    implementation 'org.jline:jansi:3.30.3'
    implementation 'com.github.umjammer:jlayer:1.0.3'
    implementation 'com.mpatric:mp3agic:0.9.1'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}
task run(type: JavaExec) {
    mainClass = 'org.AS91907.Main'
    classpath = sourceSets.main.runtimeClasspath
    standardInput = System.in
    jvmArgs(['--enable-native-access=ALL-UNNAMED'])
}
shadowJar {
    zip64 true
    manifest {
        attributes 'Main-Class': 'org.AS91907.Main'
    }
}

